# lut-gemm

./: CMakeLists.txt  NOTICE  README.md
examples/: README.md  bcq.py  bcq_parameter.py  quant_model_bcq.py  quant_model_rtn.py  rtn_parameter.py  utils.py
lutGEMM/: CMakeLists.txt
lutGEMM/include/: kernels.h  nQWeight_fp16.h
lutGEMM/src/: kernels.cu  nQWeight_fp16.cu
lutGEMM/src/cuda/: tmpWeight.hpp
lutGEMM/src/cuda/kernels/: cublas.cu  cublas.h  dequant.hpp  dequant_fp16.hpp  gptq_faster_fp16_bias.hpp  gptq_fp16_bias.hpp  mm_t.hpp  mv.hpp  mv_fp16.hpp  mv_fp16_bias.hpp
tests/: CMakeLists.txt  main.cc
tests/include/: _cublas.h  custom_random.h  tests.h  timer.h
tests/opt/: _cublas.cc  _cublas.cu
tests/opt/fp16/: int3_col_wise_matmul_fp16.cu
tests/src/: custom_random.cpp
